--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
   </svg>
   <div class="layout">
     <header>
+      <div></div>
       <h1>Yong Wang</h1>
       <p>Position Name: Web developer</p>
     </header>
