--- a/src/index-CH.html
+++ b/src/index-CH.html
@@ -94,6 +94,10 @@
               <dd><span style="width:50%"></span></dd>
             </div>
             <div>
+              <dt>Angular</dt>
+              <dd><span style="width:50%"></span></dd>
+            </div>
+            <div>
               <dt>TS</dt>
               <dd><span style="width:40%"></span></dd>
             </div>
@@ -135,12 +139,12 @@
           <ul>
             <li>
               <a href="https://aaron950415.github.io/">My blog</a>
-              <p>已经写了<b>30</b>篇技术博客。</p>
+              <p>已经写了<b>50</b>多篇技术博客。</p>
             </li>
-            <li>
+            <!-- <li>
               <a href="https://aaron950415.github.io/">My GitHub</a>
               <p>过去3个月有<b>200</b>多次的提交记录。</p>
-            </li>
+            </li> -->
           </ul>
 
           </dl>
@@ -157,9 +161,10 @@
                 <li><p>熟悉页面制作技巧，能够编写<b>语义化</b>的页面，具有<b>像素级</b>还原原设计稿的能力。</p></li>
                   <li><p>熟悉掌握原生Javascript，ES6语法,掌握重要概念如：<b>原型链</b>，<b>闭包</b>,<b>AJAX</b>，<b>JSONP</b>,<b>跨域</b>等。</p></li>
                 <li><p>熟悉掌握Vue框架使用，理解重要概念如：<b>生命周期</b>，<b>响应式原理</b>，<b>计算属性</b>，<b>监听器</b>，<b>插槽</b>等。</p></li>
+                <li><p>熟悉使用Angular框架使用，理解重要概念如：<b>生命周期</b>，<b>组件交互</b>，<b>Route</b>，<b>依赖注入</b>，<b>属性绑定</b>等。</p></li>
                     <li><p>了解<b>Typescript</b>的使用，了解<b>Webpack的配置和优化。</b></p></li>
                     <li><p>擅于面向<b>Google</b>编程，有总结书写技术博客的习惯。</p></li>
-                    <li><p>目前正在学习<b>React</b>。</p></li>
+                    <li><p>目前正在学习<b>Node.js</b>。</p></li>
               </ul>
             </div>
           </dl>
@@ -168,19 +173,37 @@
        <section>
         <h3>工作经验</h3>
         <div class="experience">
-          <ul>
+          <ul><li>
+            Apeiron Health company 的WEB开发实习生
+
+              <p>实习时间为2021年1月18日-4月18日。</p>
+              <p>在公司的主要任务就是使用<b>Angular</b>完成CTO布置的网页建设任务。</p>
+              <p>主要负责的任务有:
+                <ul>
+                  <li><div>用<b>firebase</b>完成了<b>桌面消息推送</b>的功能。</div></li>
+                  <li><div>用<b>Twilio</b>这个第三方开源插件，完成了<b>单人面对面视频</b>功能。</div></li>
+                  <li><div>根据UI设计师的要求，使用<b>bootstrap</b>修改网站的样式。</div></li>
+                  <li><div>用<b>http请求</b>向服务器GET或者POST数据。</div></li>
+                  <li><div>利用现有Twilio聊天框架做出<b>web端的实时聊天室</b>。</div></li>
+                  <li><div>制作出了<b>分页导航组件</b>，在网站内多处复用。</div></li>
+                </ul>
+              <p>由于公司网站还未发布，因此不能提供预览</p>
+            
+          </li>
             <li>
               Sunwin Investments company 的网站开发实习生
-
-                <p>实习时间为10月19日-1月11日。</p>
+              <div><a
+                href="https://www.sunwininvestments.com.au/">预览链接</a></div>
+                <p>实习时间为2020年10月19日-2月28日。</p>
+                <p>具有公司提供的实习证明，以及公司领导可以提供<b>Reference letter</b></p>
                 <p>在公司的主要任务就是使用<b>原生JS</b>完成网站的动态项目建设，以及用Telstra提供的静态网站模板建设公司的静态页面。</p>
                 <p>主要的设计有:
                   <ul>
                     <li><div>用<b>原生JS</b>设计了一个<b>收入计算器</b>，完成收入在线计算。</div></li>
                     <li><div>用<b>原生JS</b>设计了一个<b>自助客服</b>，为客户提供问题自助回答。</div></li>
                     <li><div>用<b>formspree</b>这个第三方平台，建设了一个<b>在线发送邮件</b>，为客户提供与公司交流的方式，以及帮助公司存留客户的个人信息。</div></li>
+                    <li><div>用<b>JSONPlaceholder</b>这个第三方平台，建设了一个<b>简易服务器</b>，将公司的部分数据存在GitHub中，然后在公司网站内使用这些数据。</div></li>
                   </ul>
-                <p>由于公司网站还未发布，因此不能提供预览</p>
               
             </li>
           </ul>
