--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,7 @@
         <div class="experience">
           <ul><li>
             Apeiron Health company software development
-
+            <p>Position: Front-end engineer</p>
               <p>The working hours are from January 18th to May 30th, 2021.</p>
               <p>The main task in the company is to use <b>Angular </b>to complete the web page construction tasks assigned by the CTO.</p>
               <p>The main tasks are:
