--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     <header>
       <div></div>
       <h1>Yong Wang</h1>
-      <p>Position: Web developer</p>
+      <p>Position: Front-end developer</p>
     </header>
     <main>
     <section>
