--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
             </div>
             <div>
               <dt>State</dt>
-              <dd>Studying</dd>
+              <dd>Graduate at Oct.</dd>
             </div>
           </dl>
         
