--- a/src/index.html
+++ b/src/index.html
@@ -127,11 +127,11 @@
           <h3>Related Links</h3>
           <ul>
             <li>
-              <a href="https://aaron950415.github.io/">My blog</a>
+              <a target="_blank" href="https://aaron950415.github.io/">My blog</a>
               <p>Has written more than <b>50</b> technical articles in the past</p>
             </li>
             <!-- <li>
-              <a href="https://aaron950415.github.io/">My GitHub</a>
+              <a target="_blank" href="https://aaron950415.github.io/">My GitHub</a>
               <p>More than <b>200</b> submissions in the past three months</p>
             </li> -->
           </ul>
@@ -165,9 +165,14 @@
       <section>
         <h3>Work Experiences</h3>
         <div class="experience">
+          
           <ul><li>
-            Apeiron Health company software development
+            Apeiron Health company software development</li>
+            <div><a target="_blank" href="https://appadvice.com/app/my-doctor-link/1563379899">Apple Store link
+              </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+              target="_blank" href="https://play.google.com/store/apps/details?id=com.mydoctorlink">Google Store link</a></div>
             <p>Position: Front-end engineer</p>
+          <div>
               <p>The working hours are from January 18th to May 30th, 2021.</p>
               <p>The main task in the company is to use <b>Angular </b>to complete the web page construction tasks assigned by the CTO.</p>
               <p>The main tasks are:
@@ -208,9 +213,9 @@
           <ul>
             <li>
               MM Diary
-              <div><a href="https://github.com/aaron950415/mmdiary/tree/master/src">Source
+              <div><a target="_blank" href="https://github.com/aaron950415/mmdiary/tree/master/src">Source
                   link</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-                  href="https://aaron950415.github.io/mmdiary-websit/#/money">Preview link</a></div>
+                  target="_blank" href="https://aaron950415.github.io/mmdiary-websit/#/money">Preview link</a></div>
               <div>
                 <p>A mobile single-page application based on <b>Vue, Vue-Router, Vuex and Typescript</b>.</p>
                 <p>This is a simple bookkeeping application designed by myself based on my personal needs. It adopts the
@@ -221,18 +226,18 @@
             </li>
             <li>
               Personal Navigation
-              <div><a href="https://github.com/aaron950415/mmdiary/tree/master/src">Source
+              <div><a target="_blank" href="https://github.com/aaron950415/mmdiary/tree/master/src">Source
                   link</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-                  href="https://aaron950415.github.io/navigation/">Preview link</a></div>
+                  target="_blank" href="https://aaron950415.github.io/navigation/">Preview link</a></div>
               <p>A personal web page navigation based on <b>Jquery</b>.</p>
               <p>This is a mobile navigation webpage that I designed independently and is still used in daily use. The
                 characteristic is that you can make notes on web pages yourself. Use Jquery for programming, use
                 <b>localstore, SVG Symbols, JSON serialization</b> and other knowledge.</p>
             </li>
             <li>Moving Pikachu
-              <div><a href="https://github.com/aaron950415/pikachu">Source
+              <div><a target="_blank" href="https://github.com/aaron950415/pikachu">Source
                   link</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-                  href="https://aaron950415.github.io/pikachu/src/">Preview link</a></div>
+                  target="_blank" href="https://aaron950415.github.io/pikachu/src/">Preview link</a></div>
             </li>
             <p>A dynamic Pikachu made with js</p>
             <p>This is a dynamic web page that describes the production process while drawing pictures. The
@@ -248,16 +253,16 @@
           <ul>
             <li>
               Handwriting DOM Library
-              <div><a href="https://github.com/aaron950415/dom">Source
+              <div><a target="_blank" href="https://github.com/aaron950415/dom">Source
                   link</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-                  href="https://aaron950415.github.io/dom/src/index.html">Preview link</a></div>
+                  target="_blank" href="https://aaron950415.github.io/dom/src/index.html">Preview link</a></div>
               <p>A personal dom library imitating <b>Jquery</b>, in line with my personal use style.</p>
             </li>
             <li>
               Drawing Board
-              <div><a href="https://github.com/aaron950415/learning/tree/master/%E7%94%BB%E6%9D%BF">Source
+              <div><a target="_blank" href="https://github.com/aaron950415/learning/tree/master/%E7%94%BB%E6%9D%BF">Source
                   link</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-                  href="https://aaron950415.github.io/learning/%E7%94%BB%E6%9D%BF/%E7%94%BB%E6%9D%BF-%E7%BA%BF2.html">Preview
+                  target="_blank" href="https://aaron950415.github.io/learning/%E7%94%BB%E6%9D%BF/%E7%94%BB%E6%9D%BF-%E7%BA%BF2.html">Preview
                   link</a></div>
               <p>A simple drawing board made using canvas, which improves the shortcomings of not smooth transitions.
               </p>
