update UI components

--- a/src/index.html
+++ b/src/index.html
@@ -222,6 +222,16 @@
               </div>
             </li>
             <li>
+              Pick UI for Vue3
+              <div><a target="_blank" href="https://github.com/aaron950415/pick-ui">Source
+                  link</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+                  target="_blank" href="https://aaron950415.github.io/pick-ui-website/#/">Preview link</a></div>
+              <div>
+                <p>A UI framework based on <b>Vue3, Vite and Typescript</b>.</p>
+                <p>This UI framework is a project written in learning Vue3, and its main purpose is to be directly reused in work, with better development efficiency. Currently, UI components include <b>Switch components, Button components, Dialog components and Tag components</b>.</p>
+              </div>
+            </li>
+            <li>
               Personal Navigation
               <div><a target="_blank" href="https://github.com/aaron950415/mmdiary/tree/master/src">Source
                   link</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
